--- a/puddicino/src/atoms/button/index.css
+++ b/puddicino/src/atoms/button/index.css
@@ -11,6 +11,7 @@
   cursor: pointer;
   transition: all 0.35s;
   border: none;
+  z-index: 999;
 }
 
 .Button:hover {
