--- a/puddicino/src/components/modal/index.css
+++ b/puddicino/src/components/modal/index.css
@@ -9,7 +9,7 @@
   height: 100vh;
   width: 100vw;
   background-color: rgba(0, 0, 0, 0.75);
-  z-index: -1;
+  z-index: -100;
 }
 .content {
   margin-top: 40px;
@@ -32,7 +32,7 @@
     height: 100vh;
     width: 100vw;
     background-color: rgba(0, 0, 0, 0.75);
-    z-index: -1;
+    z-index: -100;
   }
 
   .content {
